k8s-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: code
  name: app
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginx:alpine
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: code
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: code
  name: app
  labels:
    app: app
spec:
  tls:
    - hosts:
        - example.com
      secretName: app
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: app
              servicePort: 80
